--- a/react-app/src/components/Projects/Projects.css
+++ b/react-app/src/components/Projects/Projects.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    border: black 1px solid;
+    border-right: black 1px solid;
     max-width: 200px;
+    height: 100vh;
+    padding-right: 8px;
 }
 
 .project-button {
@@ -11,9 +13,16 @@
     width: 200px;
     height: 30px;
     background-color: white;
+    border-radius: 2px;
 }
 
 .project-button:hover {
-    background-color: bisque;
+    background-color: black;
+    color: white;
     cursor:pointer;
+}
+
+.new-project-button:hover {
+    background-color: black;
+    color: white;
 }
