--- a/react-app/src/components/Projects/Projects.css
+++ b/react-app/src/components/Projects/Projects.css
@@ -26,3 +26,30 @@
     background-color: black;
     color: white;
 }
+
+.project-description {
+    font-size: 9px;
+}
+
+.project-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.project-form input {
+    background-color: black;
+    color: white;
+    border-style: none;
+    line-height: 30px;
+    border-radius: 2px;
+    width: 100%;
+}
+.project-form textarea {
+    border-style: none;
+    border-radius: 2px;
+    background-color: black;
+    color: white;
+    font-family: sans-serif;
+    width: 100%;
+}
