--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -7,3 +7,19 @@
     margin-top: 50px;
     margin-left: 50px;
 }
+
+
+.page-view-container{
+
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.page-header {
+    display: flex;
+    flex-direction: column;
+
+}
