--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -6,7 +6,7 @@ nav ul {
 
 nav li {
     list-style: None;
-    margin: 0;
+    margin-bottom: 10px;
     padding: 0;
 }
 
@@ -24,7 +24,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 
     width: 200px;
     /* border: solid black 1px; */
@@ -35,7 +35,26 @@ nav {
 .logo {
     height: 100px;
     width: 100px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 50%;
     box-sizing: border-box;
+    background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+                linear-gradient(127deg, rgba(43, 0, 255, 0.8), rgba(0,255,0,0) 70.71%),
+                linear-gradient(336deg, rgba(157, 0, 255, 0.8), rgba(0,0,255,0) 70.71%);
+    
+}
+
+
+
+
+.nav-buttons {
+    border: none;
+    background-color: white;
+    font-family: serif;
+}
+
+.nav-buttons:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
 }
