--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -1,3 +1,15 @@
 
 
+.splash-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 
+}
+
+.splash-header img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
