--- a/react-app/src/components/Templates/CountryRender.css
+++ b/react-app/src/components/Templates/CountryRender.css
@@ -1,27 +1,30 @@
 .detail-box {
-    background-color: white;
+    background-color: rgb(232, 232, 232);
     color: black;
     padding: 10px;
     border-radius: 5px;
     width: fit-content;
     margin-bottom: 20px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 
 }
 
 .detail-box > h3 {
     margin-top: 0;
     margin-bottom: 4px;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid rgb(87, 87, 87); */
+    color: rgb(87, 87, 87);
 }
 
 .detail-title {
     font-weight: bold;
+    color: rgb(87, 87, 87);
 }
 
 .detail-box p {
     font-size: 15px;
     margin: 0;
+    color: rgb(87, 87, 87);
 }
 
 .content-box {
