--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -13,3 +13,15 @@
     height: 100%;
     border-radius: 5px;
 }
+
+.about-line a {
+    color: black;
+    text-decoration: none;
+}
+
+
+.about-line a:hover {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+}
