Added about links

--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -15,8 +15,11 @@
 }
 
 .about-line a {
+    background-color: white;
     color: black;
     text-decoration: none;
+    font-style: italic;
+
 }
 
 
