Added quill to creation pages

--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -37,3 +37,13 @@
     border: 1px solid black;
     cursor: pointer;
 }
+
+.quill {
+    width: 400px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.quilltainer {
+
+}
