--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -9,8 +9,9 @@
 }
 
 .splash-header img {
-    width: 100%;
-    height: 100%;
+    max-width: 1000px;
+    
+    /* height: 100%; */
     border-radius: 5px;
 }
 
