--- a/react-app/src/components/InsideProject/InsideProject.css
+++ b/react-app/src/components/InsideProject/InsideProject.css
@@ -4,8 +4,10 @@
     text-align: center;
     border-right: black 1px solid;
     max-width: 200px;
-    height: 100vh;
+    min-width: 200px;
+    height: 100vmin;
     padding-right: 8px;
+    overflow: scroll;
 }
 
 .project-title {
