--- a/react-app/src/components/InsideSplash/InsideSplash.css
+++ b/react-app/src/components/InsideSplash/InsideSplash.css
@@ -4,12 +4,13 @@
 
 .project-splash {
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin-left: 8px;
+
 }
 
 .project-splash img {
-    width: 100;
+    width: 60%;
     height: 100%;
 }
