--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -4,8 +4,14 @@
 }
 
 .page-form {
-    margin-top: 50px;
-    margin-left: 50px;
+    /* margin-top: 50px;
+    margin-left: 50px; */
+    /* margin-right: 150px;
+    width: 550px; */
+    padding-left: 50px;
+    padding-right: 50px;
+    max-height: 1000px;
+    overflow: scroll;
 }
 
 
@@ -14,8 +20,12 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-left: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-top: 50px;
+    max-height: 1000px;
+    overflow: scroll;
+    position: relative;
 }
 
 .page-header {
@@ -38,7 +48,8 @@
     cursor: pointer;
 }
 .page-image {
-    height: 200px;
+    min-height: 200px;
+    max-height: 200px;
     width: 800px;
     /* border: 1px solid black; */
     overflow: hidden;
@@ -54,8 +65,9 @@
     width: 100px;
     border-radius: 50%;
     position:absolute;
-    left: 260px;
-    top: 180px;
+    /* right: 350px; */
+    left: 20px;
+    top: 120px;
     z-index: 100;
     background-color: grey;
     overflow: hidden;
@@ -66,6 +78,16 @@
     width: 100px;
 
 
+}
+
+
+
+.new-page-button {
+    margin: 10px;
+}
+
+.page-container {
+    overflow: scroll;
 }
 
 
