--- a/react-app/src/components/Cards/Cards.css
+++ b/react-app/src/components/Cards/Cards.css
@@ -22,3 +22,28 @@
     width: 300px;
     height: 300px;
 }
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+}
+
+.add-card {
+    border: 3px solid rgb(46, 46, 46);
+    background-color: white;
+    font-family: 'Courier New', Courier, monospace;
+    color: green;
+    border-radius: 50%;
+    width: 65px;
+    height: 65px;
+    position: absolute;
+    right: 25px;
+    font-size: 50px;
+    text-align: center;
+}
+
+.add-card:hover {
+    background-color: rgb(46, 46, 46);
+    color: green;
+}
