--- a/react-app/src/components/Cards/Cards.css
+++ b/react-app/src/components/Cards/Cards.css
@@ -1,4 +1,5 @@
 .card-view-container {
+    margin-top: 5px;
     max-height: 1000px;
     max-width: auto;
     overflow: scroll;
@@ -26,7 +27,7 @@
 .card-header {
     display: flex;
     justify-content: space-between;
-    margin: 5px;
+    /* margin: 5px; */
 }
 
 .add-card {
