--- a/react-app/src/components/Cards/Cards.css
+++ b/react-app/src/components/Cards/Cards.css
@@ -1,7 +1,8 @@
 .card-view-container {
     margin-top: 5px;
-    max-height: 1000px;
+    max-height: auto;
     max-width: auto;
+    /* min-height: 100%; */
     overflow: scroll;
     background-color:rgb(46, 46, 46);
     margin:auto;
@@ -16,13 +17,38 @@
 
 .card-container {
     max-width:auto;
-    max-height:300px;
+    min-height:300px;
+    background-color: white;
+    color: black;
+    /* border: 1px solid red; */
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .card-container img {
     width: 300px;
     height: 300px;
 }
+
+.card-container:hover {
+    max-width: 600px;
+    height: 500px;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    color: black;
+    /* overflow: visible; */
+    z-index: 100;
+    overflow: scroll;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgb(0, 0, 0);
+}
+
+.card-description {
+    margin: 3px;
+}
+
 
 .card-header {
     display: flex;
@@ -47,4 +73,5 @@
 .add-card:hover {
     background-color: rgb(46, 46, 46);
     color: green;
+    cursor: pointer;
 }
