Added default styling

--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -27,8 +27,9 @@ nav {
     justify-content: flex-start;
 
     width: 200px;
-    /* border: solid black 1px; */
+    border-right: solid black 1px;
     text-align: center;
+
 }
 
 
@@ -41,7 +42,7 @@ nav {
     background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
                 linear-gradient(127deg, rgba(43, 0, 255, 0.8), rgba(0,255,0,0) 70.71%),
                 linear-gradient(336deg, rgba(157, 0, 255, 0.8), rgba(0,0,255,0) 70.71%);
-    
+
 }
 
 
