--- a/react-app/src/components/Cards/Cards.css
+++ b/react-app/src/components/Cards/Cards.css
@@ -54,6 +54,13 @@
     margin: 3px;
 }
 
+.card-placeholder {
+    width: 300px;
+    height: 300px;
+    border: 5px solid rgb(20, 20, 20);
+    background-color: rgb(20, 20, 20);
+    border-radius: 10px;
+}
 
 .card-header {
     display: flex;
