Fixed margin issue with page form

--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -10,6 +10,7 @@
     margin-left: 50px; */
     /* margin-right: 150px;
     width: 550px; */
+    margin: auto;
     padding-top: 50px;
     padding-left: 50px;
     padding-right: 50px;
