--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -15,7 +15,7 @@
     padding-top: 50px;
     padding-left: 50px;
     padding-right: 50px;
-    max-height: 1000px;
+    max-height: 100vh;
     overflow: scroll;
 
 }
