--- a/react-app/src/components/TemplateForms/CountryForm.css
+++ b/react-app/src/components/TemplateForms/CountryForm.css
@@ -2,7 +2,7 @@
 .new-page-form input {
     margin-bottom: 10px;
     width: 400px;
-    
+
 }
 
 .new-page-form textarea {
@@ -15,13 +15,17 @@
 }
 
 .quill {
-    width: 400px;
-    height: 400px;
+    width: 50vw;
+    height: 80vh;
     padding: auto;
     margin: auto;
 }
 
 .quilltainer {
-    height: 450px;
-    overflow:auto
+    height: 80vh;
+}
+
+.new-page-form {
+    display: flex;
+    flex-direction: row;
 }
