--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -1,7 +1,9 @@
 .new-page-container {
     display: flex;
     flex-direction: row;
-
+    width: 100%;
+    height: 100%;
+    position: fixed;
 
 }
 
@@ -39,14 +41,16 @@ textarea::placeholder {
     margin-right: auto;
     padding-left: 50px;
     padding-right: 50px;
-    margin-top: 50px;
-    max-height: 1000px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    /* max-height: 1000px; */
     overflow: scroll;
     position: relative;
 }
 
 .page-header {
     display: flex;
+    position: sticky;
     flex-direction: column;
 
 }
@@ -164,17 +168,16 @@ button.ql-link, button.ql-clean  {
 
 .add-image {
 
-    /* border: 1px solid white; */
+
     border: 1px solid rgba(0, 187, 255, 0);
     background-color: rgba(0, 187, 255, 0);
     font-family: 'Courier New', Courier, monospace;
     color: green;
-    /* border-radius: 50%; */
     z-index: 100;
     width: 30px;
     height: 30px;
     position: absolute;
-    right: 50px;
+    right: 70px;
     font-size: 20px;
     text-align: center;
 }
