Fixed add image issue

--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -177,7 +177,7 @@ button.ql-link, button.ql-clean  {
     width: 30px;
     height: 30px;
     position: absolute;
-    right: 70px;
+    /* right: 70px; */
     font-size: 20px;
     text-align: center;
 }
