--- a/react-app/src/components/InsideProject/InsideProject.css
+++ b/react-app/src/components/InsideProject/InsideProject.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    border-right: black 1px solid;
+    border-right: lightgray 1px solid;
     max-width: 200px;
     min-width: 200px;
     height: 100vmin;
-    padding-right: 8px;
+    padding-right: 0px;
     overflow: scroll;
 }
 
