--- a/react-app/src/components/Projects/Projects.css
+++ b/react-app/src/components/Projects/Projects.css
@@ -1,13 +1,4 @@
-.project-container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    border-right: black 1px solid;
-    max-width: 200px;
-    height: 100vh;
-    padding-right: 8px;
-    align-items: center;
-}
+
 
 .project-button {
     border: none;
@@ -22,8 +13,8 @@
 }
 
 .project-button:hover {
-    background-color: black;
-    color: white;
+    background-color: lightgray;
+    /* color: darkgrey; */
     cursor:pointer;
 }
 
