--- a/react-app/src/components/Pages/Pages.css
+++ b/react-app/src/components/Pages/Pages.css
@@ -37,10 +37,10 @@ textarea::placeholder {
 
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 50px;
-    padding-right: 50px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    padding-left: 20%;
+    padding-right: 20%;
     margin-top: 10px;
     margin-bottom: 20px;
     /* max-height: 1000px; */
@@ -88,7 +88,7 @@ textarea::placeholder {
     width: 100px;
     border-radius: 50%;
     position:absolute;
-    
+
     left: 75px;
     top: 130px;
     z-index: 100;
