--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -11,12 +11,15 @@
 
 .splash-header {
     padding-left:20px;
+    margin: auto;
+    width: 50%;
+    text-align: center;
 }
 
 .splash-header img {
     max-width: 1000px;
 
-    /* height: 100%; */
+
     border-radius: 5px;
 }
 
@@ -33,4 +36,10 @@
     background-color: black;
     color: white;
     text-decoration: none;
+}
+
+.login-links ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
